[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-rpc"
version = "1.6.2"
authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Flask",
    "Natural Language :: English",
]
description = "Turn Flask into a simple RPC server"
readme = "README.md"
dependencies = [
    'Flask',
    'pydantic',
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"